# adwarden

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yml
app/: build.gradle.kts  proguard-rules.pro
app/schemas/com.adwarden.data.db.AdwardenDatabase/: 1.json  2.json  3.json
app/schemas/io.github.sylirre.adwarden.data.db.AdwardenDatabase/: 4.json
app/src/androidTest/java/com/adwarden/: NativeCoreSmokeTest.kt  VpnGateTest.kt
app/src/androidTest/java/io/github/sylirre/adwarden/: NativeCoreSmokeTest.kt  VpnGateTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: scriptlets_builtin.json
app/src/main/java/com/adwarden/: AdwardenApp.kt  MainActivity.kt  MainViewModel.kt
app/src/main/java/com/adwarden/capture/: HarExportManager.kt  PcapSessionManager.kt
app/src/main/java/com/adwarden/core/: Capture.kt  LiveLogState.kt  NativeBridge.kt  NativeCore.kt  NativeEventCodec.kt  NativeSessionHolder.kt
app/src/main/java/com/adwarden/data/: AppRuleRepository.kt  CaRepository.kt  CaptureRepository.kt  FilterRepository.kt  StatsRepository.kt
app/src/main/java/com/adwarden/data/db/: AdwardenDatabase.kt  Daos.kt  Entities.kt
app/src/main/java/com/adwarden/data/settings/: SettingsRepository.kt
app/src/main/java/com/adwarden/di/: DataModule.kt  NetworkModule.kt
app/src/main/java/com/adwarden/firewall/: AppInventory.kt  NetworkStateMonitor.kt
app/src/main/java/com/adwarden/ui/: AdwardenRoot.kt
app/src/main/java/com/adwarden/ui/components/: Components.kt
app/src/main/java/com/adwarden/ui/screens/: AppsScreen.kt  AppsViewModel.kt  CaInstallDialog.kt  DashboardScreen.kt  FiltersScreen.kt  FiltersViewModel.kt  OnboardingScreen.kt  SettingsScreen.kt  TrafficScreen.kt  TrafficViewModel.kt
app/src/main/java/com/adwarden/ui/theme/: Color.kt  Shapes.kt  Theme.kt  Type.kt
app/src/main/java/com/adwarden/vpn/: AdwardenTileService.kt  AdwardenVpnService.kt  TunRoutes.kt
app/src/main/java/com/adwarden/work/: FilterSyncWorker.kt
app/src/main/java/io/github/sylirre/adwarden/: AdwardenApp.kt  MainActivity.kt  MainViewModel.kt
app/src/main/java/io/github/sylirre/adwarden/capture/: HarExportManager.kt  PcapSessionManager.kt
app/src/main/java/io/github/sylirre/adwarden/core/: Capture.kt  LiveLogState.kt  NativeBridge.kt  NativeCore.kt  NativeEventCodec.kt  NativeSessionHolder.kt
app/src/main/java/io/github/sylirre/adwarden/data/: AppRuleRepository.kt  CaRepository.kt  CaptureRepository.kt  FilterRepository.kt  StatsRepository.kt
app/src/main/java/io/github/sylirre/adwarden/di/: DataModule.kt  NetworkModule.kt
app/src/main/java/io/github/sylirre/adwarden/firewall/: AppInventory.kt  NetworkStateMonitor.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_notification.xml  ic_tile_shield.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/xml/: locales_config.xml
app/src/test/java/com/adwarden/core/: NativeEventCodecTest.kt
app/src/test/java/com/adwarden/data/: AppRuleRepositoryTest.kt  CaptureRepositoryTest.kt  StatsAccumulatorTest.kt
app/src/test/java/com/adwarden/vpn/: TunRoutesTest.kt
gradle/: libs.versions.toml
rust/: Cargo.toml
rust/core/: Cargo.toml
rust/core/src/: bridge.rs  config.rs  event.rs  ffi.rs  forward.rs  lib.rs  runtime.rs
rust/dns/: Cargo.toml
rust/dns/src/: lib.rs
rust/filter/: Cargo.toml
rust/filter/src/: lib.rs
rust/netstack/: Cargo.toml
rust/netstack/src/: device.rs  flow_table.rs  lib.rs  packet.rs  stack.rs  udp.rs
rust/pcap/: Cargo.toml
rust/pcap/src/: lib.rs
rust/tls/: Cargo.toml
rust/tls/src/: dns.rs  h2.rs  har.rs  lib.rs  mitm.rs  rewriter.rs  sni.rs
scriptlets/: README.md  build.py
scriptlets/src/: abort-current-inline-script.js  abort-on-property-read.js  noop.js  set-constant.js
scripts/: build-native.sh
(+30 files in other folders)
