[package]
name = "adwarden-tls"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
# Minimal DNS wire parse/synthesize for encrypted-DNS (DoT/DoH) filtering.
adwarden-dns = { path = "../dns" }
# HPACK codec (RFC 7541) for the app-facing HTTP/2 side of DoH filtering. Pure
# Rust, synchronous — fits the datapath's byte-pump model (the async `h2` crate
# does not). Cross-compiles cleanly to the Android ABIs.
fluke-hpack = "0.3"
rustls.workspace = true
rcgen.workspace = true
webpki-roots.workspace = true
log.workspace = true
# HAR 1.2 capture/serialization (P2-3). serde_json is already built for `core`.
serde.workspace = true
serde_json.workspace = true
